Bug 1630819 - Remove the logic to reframe root unconditionally when reframing body. r=emilio

For whatever reasons, we pass body element into
`RecreateFramesForContent`, the root element won't be reframed down in
the `ContentRemoved` path, but in `ContentRangeInserted()` path while
checking `WipeContainingBlock`. And in bug 1593752, we already have the
logic to reframe root element only when html and body's writing-modes
are different, so we won't over-eagerly reframe the root element.

Differential Revision: https://phabricator.services.mozilla.com/D71606