layout/base/nsCSSFrameConstructor.cpp
@@ -8245,17 +8245,6 @@ bool nsCSSFrameConstructor::MaybeRecreateContainerForFrameRemoval(
              "placeholder for primary frame has previous continuations?");
   nsIFrame* parent = inFlowFrame->GetParent();
 
-  if (aFrame->GetContent() == mDocument->GetBodyElement()) {
-    // If the frame of the canonical body element is removed (either because of
-    // removing of the element, or removing for frame construction like
-    // writing-mode changed), we need to reframe the root element so that the
-    // root element's frames has the correct writing-mode propagated from body
-    // element. (See nsCSSFrameConstructor::ConstructDocElementFrame.)
-    TRACE("Root");
-    RecreateFramesForContent(mDocument->GetRootElement(), InsertionKind::Async);
-    return true;
-  }
-
   if (inFlowFrame->HasAnyStateBits(NS_FRAME_HAS_MULTI_COLUMN_ANCESTOR)) {
     nsIFrame* grandparent = parent->GetParent();
     MOZ_ASSERT(grandparent);
